# discord_color_bot

./: .gitignore  Cargo.toml  create.json  example.config.yaml
slash_commands/: create_commands.sh  help.json  setcolor.json
src/: bot_config.rs  color_bot_handler.rs  color_name_map.rs  color_parser.rs  discord_commands.rs  handler.rs  lib.rs  main.rs
