[package]
name = "discord_name_color"
version = "0.1.0"
authors = ["Vignesh Kuppusamy <vkuppusamy@techdynamism.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8"
hex = "0.4.1"
lazy_static = "1.4.0"
config = "0.10.1"
log = "0.4.8"
simplelog = "0.7.4"