[package]
name = "discord_color_bot"
version = "1.0.0"
authors = ["Vignesh Kuppusamy <viggykuppu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.8", default-features = true, features = ["unstable_discord_api"] }
lazy_static = "1.4.0"
config = "0.11.0"
log = "0.4.8"
simplelog = "0.10.0"
tokio = { version = "1.7.1", features = ["macros", "rt-multi-thread"] }